--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
     <meta charset="UTF-8">
         <Link href="css/estilo.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+		body {
+	font-family: "tahoma";
+	font-size: 12px;
+}
+
+#formulario {
+	border: solid 2px #b7ddf2;
+	background: #b7ddf2;
+	margin: 0 auto;
+	width: 450px;
+	padding: 10px;
+}
+
+h1 {
+	font-size: 16px;
+	font-weight: bold;
+	margin-bottom: 2px;
+}
+
+#linea {
+	color: #666666;
+	margin-bottom: 5px;
+	border-bottom: solid 1px #FFF;
+	padding-bottom: 5px;
+}
+
+#label {
+	display: block;
+	font-weight: bold;
+	width: 240px;
+	font-size: 12px;
+}
+
+#caja {
+	padding: 4px;
+	border: solid 1px #aacfe4;
+	margin: 2px 0 5px 0 ;
+}
+
+#boton {
+	clear: both;
+	margin-left: 150px;
+	width: 125px;
+	height: 31px;
+	background: #666666;
+	text-align: center;
+	line-height: 31px;
+	color: #FFFFFF;
+	font-size: 11px;
+	font-weight: bold;
+}
+</style>
 </head>
 <body>
     <section id="formulario">
